WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
189150
[LFC][Floating] Block formatting context roots avoid floats.
https://bugs.webkit.org/show_bug.cgi?id=189150
Summary
[LFC][Floating] Block formatting context roots avoid floats.
alan
Reported
2018-08-30 01:35:11 PDT
so that floats don't intrude anymore.
Attachments
Patch
(20.84 KB, patch)
2018-08-30 01:48 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(20.85 KB, patch)
2018-08-30 01:51 PDT
,
alan
koivisto
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2018-08-30 01:48:27 PDT
Created
attachment 348491
[details]
Patch
alan
Comment 2
2018-08-30 01:51:16 PDT
Created
attachment 348492
[details]
Patch
EWS Watchlist
Comment 3
2018-08-30 01:53:37 PDT
Attachment 348492
[details]
did not pass style-queue: ERROR: Source/WebCore/layout/floats/FloatingContext.h:54: Tab found; better to use spaces [whitespace/tab] [1] Total errors found: 1 in 17 files If any of these errors are false positives, please file a bug against check-webkit-style.
alan
Comment 4
2018-08-30 07:45:06 PDT
Committed
r235505
: <
https://trac.webkit.org/changeset/235505
>
Radar WebKit Bug Importer
Comment 5
2018-08-30 07:46:15 PDT
<
rdar://problem/43885285
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug